Vastly improved the cleanliness of the launcher.